# PxpRpc

./: README.md
c/: CMakeLists.txt  readme.md
c/include/: pxprpc.h  pxprpc_ext.hpp  pxprpc_libuv.h  pxprpc_pipe.h  pxprpc_pp.hpp  pxprpc_tbox.h
c/pxprpc/: config.h  def.h  make-config.mk  pxprpc.c  readme.txt  serializer.c  server.c  server.h  utils.c
c/pxprpc/cppwrap/: server_pp.hpp
c/pxprpc_host/: pxprpc_host.cpp
c/pxprpc_libuv/: make-config.mk  pxprpc_libuv.c  server_libuv.c  server_libuv.h  test.cpp
c/pxprpc_pipe/: .gitignore  README.md  make-config.mk  pxprpc_pipe.c  test.c
c/pxprpc_tbox/: make-config.mk  pxprpc_tbox.c  server_tbox.c  server_tbox.h  test.cpp
csharp/dotnet/pxprpc/: AbstractCallable.cs  BoundMethodCallable .cs  BuiltInFuncList.cs  MethodCallable.cs  PxpCallable.cs  PxpObject.cs  PxpRequest.cs  Ref.cs  ServerContext.cs  Utils.cs
csharp/dotnet/pxprpc/backend/: TcpBackend.cs
csharp/dotnet/pxprpc/tests/: TestMain.cs
documents/: FunctionConvention.md  README.md  RpcMessageFrameFormat.md
java/src/pursuer/pxprpc/: AbstractCallable.java  AsyncReturn.java  BoundMethodCallable.java  BuiltInFuncList.java  CommonCallable.java  EventDispatcher.java  GetMethodOfNameFunc.java  MethodCallable.java  MethodSignature.java  MethodTypeDecl.java  PxpCallable.java  PxpChannel.java  PxpObject.java  PxpRequest.java  Ref.java  Serializer2.java  ServerContext.java  TableSerializer.java  Utils.java
java/src/pursuer/pxprpc_ex/: TCPBackend.java
java/src/pursuer/test/: PxpRpc.java
java/src/pxprpc/backend/: ChannelFromStream.java  ChannelIo.java  ChannelIo2.java  TCPBackend.java
java/src/pxprpc/base/: AbstractIo.java  ClientContext.java  FuncMap.java  PxpCallable.java  PxpRef.java  PxpRequest.java  RemoteError.java  Serializer2.java  ServerContext.java  Utils.java
java/src/pxprpc/extend/: AsyncReturn.java  BoundMethodCallable.java  BuiltInFuncList.java  CommonCallable.java  DefaultFuncMap.java  EventDispatcher.java  MethodCallable.java  MethodTypeDecl.java  PxprpcPPFuncList.java  RpcExtendClient1.java  RpcExtendClientCallable.java  RpcExtendClientObject.java  TableSerializer.java  TypeDeclParser.java
java/src/pxprpc/test/: PxpRpc.java
native_pipe/: readme.md
native_pipe/core/: make-config.mk  pxprpc_pipe.c  pxprpc_pipe.h
native_pipe/include/: pxprpc_pipe.h
native_pipe/java/: jnibridge.c
native_pipe/rtbridge/: pxprpc_rtbridge.c  pxprpc_rtbridge.h
native_pipe/test/: .gitignore  Makefile  pipecoretest.c
python/pxprpc/: backend.py  base.py  client.py  common.py  extend.py  server.py  tests.py
runtime_bridge/: CMakeLists.txt  readme.md
runtime_bridge/c-modules/: .gitignore  readme.md
runtime_bridge/c-modules/base/: def.cmake  pxprpc_rtbridge_base.hpp
runtime_bridge/c-modules/pxprpc-libuv/: def.cmake  pxprpc_libuv.hpp
runtime_bridge/c-modules/pxprpc_libuv_rpc/: def.cmake  init.hpp
runtime_bridge/c-modules/pxprpc_rtbridge_base/: def.cmake  init.hpp
runtime_bridge/include/: memfile.h  pxprpc_rtbridge.h  pxprpc_rtbridge_host.hpp
runtime_bridge/java/: NativeHelper.java  NativePipeIo.java  NativePipeServer.java  RtbEventParser.java  RuntimeBridge.java  jnibridge.c  jnibridge.cpp
runtime_bridge/java/pxprpc/runtimebridge/: Io.java  NativeHelper.java  Pipe.java  PipeServer.java  RuntimeBridgeUtils.java
runtime_bridge/src/: .gitignore  make-config.mk  pxprpc_rtbridge.c  pxprpc_rtbridge_base.hpp  pxprpc_rtbridge_host.cpp  pxprpc_rtbridge_mod.hpp  pxprpc_rtbridgepp.cpp  test.c  test.cpp
tools/: README.md
tools/pxprpc_tools/: idlcomm.py  idldef.py  idlgenjava.py  idlgenpy.py  idlgents.py
typescript/pxprpc/: backend.ts  base.ts  extend.ts  tests.ts
